# back.api/docs/swagger.yaml
@@ -41,6 +41,19 @@ definitions:
     - BeautyPost
     - ETCPost
     - CategoryTypeMax
+  domain.PostType:
+    enum:
+    - 101
+    - 102
+    type: integer
+    x-enum-comments:
+      RequestPost: "102"
+    x-enum-descriptions:
+    - ""
+    - "102"
+    x-enum-varnames:
+    - ProviderPost
+    - RequestPost
   domain.RoleType:
     enum:
     - 0
@@ -165,6 +178,8 @@ definitions:
         type: array
       title:
         type: string
+      type_id:
+        $ref: '#/definitions/domain.PostType'
     type: object
   v1.FileInfo:
     properties:
@@ -197,6 +212,8 @@ definitions:
         type: integer
       title:
         type: string
+      type_id:
+        $ref: '#/definitions/domain.PostType'
       updated_at:
         type: string
       views:
@@ -239,6 +256,8 @@ definitions:
         type: integer
       title:
         type: string
+      type_id:
+        $ref: '#/definitions/domain.PostType'
       views:
         type: integer
     type: object
@@ -275,6 +294,15 @@ definitions:
           type: integer
         type: array
       title:
+        type: string
+      type_id:
+        $ref: '#/definitions/domain.PostType'
+    type: object
+  v1.UpdateUserRequest:
+    properties:
+      nickname:
+        type: string
+      profile_image_id:
         type: string
     type: object
   v1.UploadFileResponse:
@@ -630,7 +658,7 @@ paths:
       consumes:
       - application/json
       description: 'category_id는 다음과 같습니다.(0: 공지 1: 예술 2: 환경 3: 교육 4: 상담 5: 스포츠 6:
-        미용 7: 기타)'
+        미용 7: 기타). type_id는 봉사 제공 게시글(101), 봉사 검색 게시글(102)입니다.'
       parameters:
       - description: 게시글 생성 요청 파라미터
         in: body
@@ -864,6 +892,48 @@ paths:
       summary: 댓글 생성
       tags:
       - Comment
+  /api/v1/user/profile:
+    patch:
+      consumes:
+      - application/json
+      description: 사용자가 자신의 닉네임과 프로필 이미지를 수정할 수 있는 엔드포인트입니다.
+      parameters:
+      - description: 유저 정보 수정 요청 파라미터
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/v1.UpdateUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v1.Response'
+        "400":
+          description: 'ErrShouldBindJson(5001): 잘못된 JSON 형식입니다. / ErrBadRequest(5001):
+            nickname 또는 profile_image_id가 누락되었습니다.'
+          schema:
+            $ref: '#/definitions/errors.AppError'
+        "401":
+          description: 'ErrTokenMissing(105): 인증 토큰이 누락되었습니다. / ErrInvalidAuthHeader(104):
+            유효하지 않은 Authorization 헤더입니다.'
+          schema:
+            $ref: '#/definitions/errors.AppError'
+        "403":
+          description: 'ErrUnauthorized(106): 인증되지 않은 사용자입니다.'
+          schema:
+            $ref: '#/definitions/errors.AppError'
+        "500":
+          description: 'ErrDatabase(9999): 데이터베이스 처리 중 오류가 발생했습니다.'
+          schema:
+            $ref: '#/definitions/errors.AppError'
+      security:
+      - BearerAuth: []
+      summary: 사용자 프로필 정보 수정
+      tags:
+      - User
 securityDefinitions:
   BearerAuth:
     description: '"Bearer {access_token}" 형식으로 전달합니다. 로그인(`/auth/login`) 또는 회원가입(`/auth/register`)
