# back.api/internal/handler/v1/post_req.go
@@ -7,6 +7,7 @@ type CreatePostRequest struct {
 	Files []int `json:"files"`
 	Content string `json:"content"`
 	CategoryID domain.CategoryType `json:"category_id"`
+	TypeID domain.PostType `json:"type_id"`
 }
 
 type UpdatePostRequest struct {
@@ -14,4 +15,5 @@ type UpdatePostRequest struct {
 	Files []int `json:"files"`
 	Content string `json:"content"`
 	CategoryID domain.CategoryType `json:"category_id"`
+	TypeID domain.PostType `json:"type_id"`
 }
