# back.api/internal/handler/v1/user_req.go
@@ -1,0 +1,6 @@
+package v1
+
+type UpdateUserRequest struct {
+	Nickname string `json:"nickname"`
+	ProfileImageID string `json:"profile_image_id"`
+}
